<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:padding="10dp"
        android:text="@string/title"
        android:textColor="#040404"
        android:typeface="sans"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/linearThumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/title"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical" >

        <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/thumbnail"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentLeft="true"
             />
    </LinearLayout>

    <TextView
        android:id="@+id/myReview"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearThumbnail"
        android:layout_marginLeft="10dp"
        android:text="@string/myreview"
        android:textSize="13sp" />

    <RatingBar
        android:id="@+id/rateMyreview"
        style="?android:attr/ratingBarStyleIndicator"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/linearThumbnail"
        android:layout_below="@+id/myReview"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="48dp" 
        android:numStars="5"
        android:stepSize="0.01"/>

    <TextView
        android:id="@+id/synopsis"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_above="@+id/editSynopsis"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:linksClickable="true"
        android:text="@string/synopsis"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/casting"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignLeft="@+id/myReview"
        android:layout_below="@+id/editSynopsis"
        android:layout_marginTop="20dp"
        android:linksClickable="true"
        android:text="@string/castings"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/editCasting"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/casting"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/back"
        android:ems="10"
        android:maxLines="3"
        android:padding="10dp"
        android:scrollbars="vertical" />

    <TextView
        android:id="@+id/editSynopsis"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rateMyreview"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/back"
        android:maxLines="4"
        android:padding="10dp"
        android:scrollbars="vertical" />

    <TextView
        android:id="@+id/similar"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignLeft="@+id/myReview"
        android:layout_below="@+id/editCasting"
        android:layout_marginTop="10dp"
        android:linksClickable="true"
        android:text="@string/similar"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/editSimilar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/similar"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:maxLines="4"
        android:padding="10dp"
        android:background="@drawable/back" />

    <TextView
        android:id="@+id/release"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignTop="@+id/linearThumbnail"
        android:layout_toRightOf="@+id/linearThumbnail"
        android:text="@string/release"
        android:textSize="13sp" />
    <TextView
        android:id="@+id/editRelease"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignTop="@+id/linearThumbnail"
        android:layout_toRightOf="@+id/release"
        android:layout_marginLeft="15dp"
        android:textSize="13sp" />

    <LinearLayout
        android:id="@+id/linearAudience"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/release"
        android:layout_toRightOf="@+id/linearThumbnail"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/audience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/audience"
            android:textSize="13sp" 
            android:layout_marginRight="35dp"/>

        <RatingBar
            android:id="@+id/rateAudience"
            style="?android:attr/ratingBarStyleIndicator"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:numStars="5"
            android:stepSize="0.01"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearCritics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearAudience"
        android:layout_toRightOf="@+id/linearThumbnail"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/critics"
            android:layout_width="60dp"
            android:layout_height="20dp"
            android:text="@string/critics"
            android:textSize="13sp" 
            android:layout_marginRight="25dp"/>

        <RatingBar
            android:id="@+id/rateCritics"
            style="?android:attr/ratingBarStyleIndicator"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:numStars="5" 
            android:stepSize="0.01"/>
    </LinearLayout>

</RelativeLayout>